Fixed issue with using subscription id instead of combined primary key(user_id+service_name), because one user can have only one subscription on a certain service. I know, that I was late a bit with this changes, but the HR wrote me last tuseday at 14:50 and now is only 14:39, so it was less than 7 days still). Anyway, I hope this is not too late and you haven't already marked my work as bad because of previous iteration. Thanks for understanding
